fix: use flex display to better vertical align drop item

--- a/src/multiple-select.css
+++ b/src/multiple-select.css
@@ -145,7 +145,8 @@
 
 .ms-drop ul > li {
     list-style: none;
-    display: list-item;
+    display: flex;
+    align-items: center;
     background-image: none;
     position: static;
 }
